@@ -1,0 +1,12 @@
+# nm: -B
+#
+# match for 32 and 64 bits.
+(00000000)?00008000 b align_max
+(00000000)?00000010 b another_align
+(00000000)?00000000 b column0
+(00000000)?00000002 b column1
+(00000000)?00000004 b local3_noalign
+(00000000)?00000008 b local4_aligned_2
+(00000000)?00000020 b nospaces
+(00000000)?00000040 b trailingspace
+#
